# guess_what

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: naming-conventions.md
src/guess/: __init__.py  grammar.py  model.py  parser.py  values.py
src/guess/clauses/: arguments.py  call.py  conditions.py  delete.py  insert.py  select.py  select_options.py  update.py
tests/: test_database.py  test_integration_mysql.py  test_integration_postgres.py  test_integration_sqlite.py  test_parser.py
