[project]
name = "guess-what"
version = "1.0.1"
description = "A dynamic SQL interceptor and micro-ORM for Python based on semantic method names."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "inflection>=0.4.0",
    "psycopg2-binary>=2.9.12",
    "aiopg>=1.4.0"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
